--- a/index.html
+++ b/index.html
@@ -24,43 +24,43 @@
             <ul class="list-unstyled components">
                 <li class="active">
                     <a href="#">
-                        <i class="fas fa-home"></i>
+                        <span class="menu_icon"><i class="fas fa-home"></i></span>
                         Головна
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fas fa-truck-moving"></i>
+                        <span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
                         Вантажі
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fas fa-clipboard-list"></i>
+                        <span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
                         Замовлення
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fas fa-dollar-sign"></i>
+                        <span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
                         Фінанси
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="far fa-newspaper"></i>
+                        <span class="menu_icon"><i class="far fa-newspaper"></i></span>
                         Новини
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="far fa-envelope"></i>
+                        <span class="menu_icon"><i class="far fa-envelope"></i></span>
                         Контакти
                     </a>
                 </li>
                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="far fa-user"></i>
+                        <span class="menu_icon"><i class="far fa-user"></i></span>
                         Акаунт
                     </a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
@@ -86,11 +86,6 @@
 	  <header>
 		<div class="container-fluid">
 			<div class="row justify-content-around">
-				<div>
-					<button type="button" id="sidebarCollapse" class="btn btn-info">
-				    	<i class="fas fa-align-left"></i>
-					</button>
-				</div>
 			  <div class="col-lg-3">Глобальный пошук</div>
 			  <div class="col-lg-2">
 				<i class="fas fa-money-check-alt"></i>
