--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<title>TCG CRM</title>
   </head>
   <body>
-
 	<div class="wrapper">
 		<!-- Sidebar  -->
 	    <nav id="sidebar">
@@ -79,238 +78,265 @@
                     </ul>
                 </li>
             </ul>
-        </nav>
-
+        </nav>        
 		<!-- Page Content  -->
 		<div id="content">
-	  <header>
-		<div class="container-fluid">
-			<div class="row justify-content-around">
-			  <div class="col-lg-3">Глобальный пошук</div>
-			  <div class="col-lg-2">
-				<i class="fas fa-money-check-alt"></i>
-				<p>&#36; 0</p>
-			  </div>
-			  <div class="col-lg-2">
-				<p>ID: 31-589</p>
-			  </div>
-			  <div class="col-lg-2">
-				<p>Андрій</p>
-				<i class="fas fa-sign-out-alt"></i>
-			  </div>
-			</div>
-		</div>
-	  </header>
-		<div class="container-fluid">
-
-			<div class="row">
-				<div class="col-lg-7 col-md-6">
-					<div class="row">
-					  	<h3>ОСТАННІ ОНОВЛЕННЯ</h3>
-						<table class="table table-striped table-hover">
-						  <thead>
-							<tr>
-							  <th scope="col">Дата</th>
-							  <th scope="col">Ключ</th>
-							  <th scope="col">Інфо</th>
-							</tr>
-						  </thead>
-						  <tbody>
-							<tr>
-							  <th scope="row">21/12</th>
-							  <td>82714</td>
-							  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-							</tr>
-							<tr>
-							  <th scope="row">21/12</th>
-							  <td>82764</td>
-							  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-							</tr>
-							<tr>
-							  <th scope="row">21/12</th>
-							  <td>81793</td>
-							  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-							</tr>
-							<tr>
-							  <th scope="row">21/12</th>
-							  <td>82297</td>
-							  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-							</tr>
-						  </tbody>
-						</table>
-					</div>
-					<div class="row justify-content-center text-center">
-					  <div class="col-12">
-						<h3>ВАНТАЖІ</h3>
-					  </div>
-					  <div class="col-3">
-						<div>
-						  <i class="fas fa-cubes"></i>
-						  <h4>Отримано</h4>
+			<header>
+				<div class="container-fluid">
+					<div class="row justify-content-between">
+						<div class="col-lg-3 col-md-4 col-sm-6 search_box">
+							<form>
+							    <div class="input-group">
+									<input type="text" class="form-control" placeholder="Глобальний пошук" aria-label="Search" aria-describedby="search">
+									<div class="input-group-append">
+									    <button class="search_button" type="submit"><i class="fas fa-search"></i></button>
+									</div>
+							    </div>
+							</form>
 						</div>
-						<div class="row justify-content-center">
-						  <div class="circle">
-							<div class="circle_number">123</div>
-						  </div>
+						<div class="col-lg-9 col-md-8 col-sm-6 header_info_box">
+							<div class="row justify-content-end">
+								<div class="info_money">
+									<i class="fas fa-money-check-alt"></i>&nbsp;&#36;0
+								</div>
+								<div class="info_userid">
+									ID: 31-589
+								</div>
+								<div class="info_username">
+									Андрій
+								</div>
+								<div class="info_logout_button">
+									<i class="fas fa-sign-out-alt"></i>
+								</div>
+							</div>
 						</div>
-					  </div>
-					  <div class="col-3">
-						<div>
-						  <i class="fas fa-plane-departure"></i>
-						  <h4>Відправлено</h4>
-						</div>
-						<div class="row justify-content-center">
-						  <div class="circle">
-							<div class="circle_number">123</div>
-						  </div>
-						</div>
-					  </div>
-					  <div class="col-3">
-						<div>
-						  <i class="fas fa-plane-arrival"></i>
-						  <h4>Прибуло</h4>
-						</div>
-						<div class="row justify-content-center">
-						  <div class="circle">
-							<div class="circle_number">123</div>
-						  </div>
-						</div>
-					  </div>
-					  <div class="col-3">
-						<div>
-						  <i class="fas fa-cubes"></i>
-						  <h4>На складі</h4>
-						</div>
-						<div class="row justify-content-center">
-						  <div class="circle">
-							<div class="circle_number">123</div>
-						  </div>
-						</div>
-					  </div>
-					  <div class="col-12">
-						<img src="img/total_icon.svg" alt="total_icon">
-						<h4>Загалом</h4>
-					  </div>
 					</div>
 				</div>
-				<div class="col-lg-5 col-md-6">
-					<h3>ФІНАНСИ</h3>
-					<div class="row">
-					  <div class="col-md-6">
-						<span>Баланс</span>
-						<p>&#36; 0</p>
-					  </div>
-					  <div class="col-md-6">
-						<button>Додати кошти</button>
-					  </div>
+			</header>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-lg-7 col-md-6">
+						<div class="dasbord_artbord">
+							<div class="row">
+								<div class="col-12">
+									<h3 class="block_heading"><a href="#">ОСТАННІ ОНОВЛЕННЯ</a></h3>
+								</div>
+								<table class="table table-striped table-hover">
+								  <thead>
+									<tr>
+									  <th scope="col">Дата</th>
+									  <th scope="col">Ключ</th>
+									  <th scope="col">Інфо</th>
+									</tr>
+								  </thead>
+								  <tbody>
+									<tr>
+									  <th scope="row">21/12</th>
+									  <td><a href="#">82714</a></td>
+									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
+									</tr>
+									<tr>
+									  <th scope="row">21/12</th>
+									  <td><a href="#">82764</a></td>
+									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
+									</tr>
+									<tr>
+									  <th scope="row">21/12</th>
+									  <td><a href="#">81793</a></td>
+									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
+									</tr>
+									<tr>
+									  <th scope="row">21/12</th>
+									  <td><a href="#">82297</a></td>
+									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
+									</tr>
+								  </tbody>
+								</table>
+							</div>
+							<div class="row justify-content-center text-center cargo_block">
+							  <div class="col-12 text-left">
+								<h3 class="block_heading"><a href="#">ВАНТАЖІ</a></h3>
+							  </div>
+							  <div class="col-md-3 col-6 cargo_stage">
+								<div>
+								  <i class="fas fa-cubes"></i>
+								  <h4>Отримано</h4>
+								</div>
+								<div class="row justify-content-center">
+								  <div class="circle">
+									<div class="circle_number">123</div>
+								  </div>
+								</div>
+							  </div>
+							  <div class="col-md-3 col-6 cargo_stage">
+								<div>
+								  <i class="fas fa-plane-departure"></i>
+								  <h4>Відправлено</h4>
+								</div>
+								<div class="row justify-content-center">
+								  <div class="circle">
+									<div class="circle_number">123</div>
+								  </div>
+								</div>
+							  </div>
+							  <div class="col-md-3 col-6 cargo_stage">
+								<div>
+								  <i class="fas fa-plane-arrival"></i>
+								  <h4>Прибуло</h4>
+								</div>
+								<div class="row justify-content-center">
+								  <div class="circle">
+									<div class="circle_number">123</div>
+								  </div>
+								</div>
+							  </div>
+							  <div class="col-md-3 col-6 cargo_stage">
+								<div>
+								  <i class="fas fa-cubes"></i>
+								  <h4>На складі</h4>
+								</div>
+								<div class="row justify-content-center">
+								  <div class="circle">
+									<div class="circle_number">123</div>
+								  </div>
+								</div>
+							  </div>
+							  <div class="col-12">
+								<img class="total_icon" src="img/total_icon.svg" alt="total_icon">
+								<h4>Загалом</h4>
+							  </div>
+							</div>
+						</div>
 					</div>
-					<div class="row">
-					  <h4>Останні транзакції:</h4>
-					  <table class="table table-striped table-hover">
-						<thead>
-						  <tr>
-							<th scope="col">Дата</th>
-							<th scope="col">Замовлення</th>
-							<th scope="col">Сума, &#36;</th>
-							<th scope="col">Баланс</th>
-						  </tr>
-						</thead>
-						<tbody>
-						  <tr>
-							<th scope="row">21/12</th>
-							<td>PRU-47647</td>
-							<td>-387.98</td>
-							<td>0.00</td>
-						  </tr>
-						  <tr>
-							<th scope="row">21/12</th>
-							<td>PRU-47993</td>
-							<td>-1116.00</td>
-							<td>387.98</td>
-						  </tr>
-						  <tr>
-							<th scope="row">21/12</th>
-							<td>PRU-48173</td>
-							<td>-3179.00</td>
-							<td>1503.98</td>
-						  </tr>
-						</tbody>
-					  </table>
-					</div>
-					<div class="row">
-					  <div class="col-12">
-						<h4>ВАШ МЕНЕДЖЕР</h4>
-					  </div>
-					  <div class="col-6 manager_left">
-						<div>
-						  <img class="img img-fluid manager_photo" src="img/manager_1.png" alt="manager_1" >
+					<div class="col-lg-5 col-md-6">
+						<div class="dasbord_artbord">
+							<div class="row">
+								<div class="col-12">
+									<h3 class="block_heading"><a href="#">ФІНАНСИ</a></h3>
+								</div>
+							  <div class="col-md-6">
+								<p>Баланс: <span class="total_amount">&#36; 11,413</span></p>
+							  </div>
+							  <div class="col-md-6">
+								<button class="button_standart button_refund">Додати кошти</button>
+							  </div>
+							</div>
+							<div class="row">
+							  <h4>Останні транзакції:</h4>
+							  <table class="table table-striped table-hover">
+								<thead>
+								  <tr>
+									<th scope="col">Дата</th>
+									<th scope="col">Замовлення</th>
+									<th scope="col">Сума, &#36;</th>
+									<th scope="col">Баланс</th>
+								  </tr>
+								</thead>
+								<tbody>
+								  <tr>
+									<th scope="row">21/12</th>
+									<td>PRU-47647</td>
+									<td>-387.98</td>
+									<td>0.00</td>
+								  </tr>
+								  <tr>
+									<th scope="row">21/12</th>
+									<td>PRU-47993</td>
+									<td>-1116.00</td>
+									<td>387.98</td>
+								  </tr>
+								  <tr>
+									<th scope="row">21/12</th>
+									<td>PRU-48173</td>
+									<td>-3179.00</td>
+									<td>1503.98</td>
+								  </tr>
+								</tbody>
+							  </table>
+							</div>
+							<div class="row manager_block">
+							  <div class="col-12">
+								<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h4>
+							  </div>
+							  <div class="col-6 manager_left">
+									<div>
+										<img class="img img-fluid manager_photo" src="img/manager_1.png" alt="manager_1" >
+									</div>
+									<div>
+										<div class="stars" data-stars="1">
+											<svg height="25" width="23" class="star rating" data-rating="1">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="2">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="3">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="4">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="5">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+										</div>
+										<div><span>Оцініть вашого менеджера</span></div>
+									</div>
+								</div>
+							  <div class="col-6 manager_right">
+									<div>
+										<div class="manager_name"><h3>Ірина</h3></div>
+										<div class="manager_email">l.kosenko@utec-l.com</div>
+										<div class="manager_telegram">
+											<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+										<div class="manager_telephone">
+											<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
+									</div>
+								</div>
+							</div>
+							<div class="row manager_block">
+								<div class="col-12">
+									<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
+								</div>
+								<div class="col-6 manager_left">
+									<div>
+										<img class="img img-fluid manager_photo" src="img/manager_2.png" alt="manager_2" >
+									</div>
+									<div>
+										<div class="stars" data-stars="1">
+											<svg height="25" width="23" class="star rating" data-rating="1">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="2">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="3">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="4">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+											<svg height="25" width="23" class="star rating" data-rating="5">
+											<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
+											</svg>
+										</div>
+										<div><span>Оцініть вашого менеджера</span></div>
+									</div>
+								</div>
+								<div class="col-6 manager_right">
+									<div>
+										<div class="manager_name"><h3>Ірина</h3></div>
+										<div class="manager_email">l.kosenko@utec-l.com</div>
+										<div class="manager_telegram">
+											<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+										<div class="manager_telephone">
+											<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
+									</div>
+								</div>
+							</div>
 						</div>
-						<div class="stars" data-stars="1">
-						  <svg height="25" width="23" class="star rating" data-rating="1">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="2">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="3">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="4">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="5">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						</div>
-						<h6>Оцініть вашого менеджера</h6>
-					  </div>
-					  <div class="col-6 manager_right">
-						<div>
-						  <div class="manager_name"><h3>Людмила</h3></div>
-						  <div class="manager_email">l.kosenko@utec-l.com</div>
-						  <div class="manager_telegram"><i class="fab fa-telegram"></i>+380966426120</div>
-						  <div class="manager_telephone"><i class="fas fa-mobile-alt"></i>+380966426120</div>
-						</div>
-					  </div>
-					</div>
-					<div class="row">
-					  <div class="col-12">
-						<h4>ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
-					  </div>
-					  <div class="col-6 manager_left">
-						<div>
-						  <img class="img img-fluid manager_photo" src="img/manager_2.png" alt="manager_1" >
-						</div>
-						<div class="stars" data-stars="1">
-						  <svg height="25" width="23" class="star rating" data-rating="1">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="2">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="3">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="4">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						  <svg height="25" width="23" class="star rating" data-rating="5">
-							<polygon points="9.9, 1.1, 3.3, 21.78, 19.8, 8.58, 0, 8.58, 16.5, 21.78" style="fill-rule:nonzero;"/>
-						  </svg>
-						</div>
-						<h6>Оцініть вашого менеджера</h6>
-					  </div>
-					  <div class="col-6 manager_right">
-						<div>
-						  <div class="manager_name"><h3>Ірина</h3></div>
-						  <div class="manager_email">l.kosenko@utec-l.com</div>
-						  <div class="manager_telegram"><i class="fab fa-telegram"></i>+380966426120</div>
-						  <div class="manager_telephone"><i class="fas fa-mobile-alt"></i>+380966426120</div>
-						</div>
-					  </div>
 					</div>
 				</div>
-			</div>
 			</div>
 		</div>
 	</div>
