contacts, news, newsitem pages

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="news.html">
                         <span class="menu_icon"><i class="far fa-newspaper"></i></span>
                         Новини
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="contacts.html">
                         <span class="menu_icon"><i class="far fa-envelope"></i></span>
                         Контакти
                     </a>
@@ -202,7 +202,7 @@
 								</div>
 							  </div>
 							  <div class="col-12">
-								<img class="total_icon" src="img/total_icon.svg" alt="total_icon">
+								<img class="total_icon img img-fluid" src="img/total_icon.svg" alt="total_icon">
 								<h4>Загалом</h4>
 							  </div>
 							</div>
