New colors and font

--- a/contacts.html
+++ b/contacts.html
@@ -21,7 +21,7 @@
 		<!-- Sidebar  -->
 		<nav id="sidebar">
 			<ul class="list-unstyled components">
-				<li class="active">
+				<li>
 					<a href="index.html">
 						<span class="menu_icon"><i class="fas fa-home"></i></span>
 						Головна
@@ -46,7 +46,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="news.html">
 						<span class="menu_icon"><i class="far fa-newspaper"></i></span>
 						Новини
 					</a>
