--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="finance.html">
 						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
 						Фінанси
 					</a>
