--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="style.css">
 
-	<!-- Font Awesome JS -->
+	<!-- Font Awesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 	<title>TCG CRM</title>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="finance.html">
                         <span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
                         Фінанси
                     </a>
@@ -121,7 +121,7 @@
 								<div class="col-12">
 									<h3 class="block_heading"><a href="#">ОСТАННІ ОНОВЛЕННЯ</a></h3>
 								</div>
-								<table class="table table-striped table-hover">
+								<table class="table table-responsive table-striped table-hover">
 								  <thead>
 									<tr>
 									  <th scope="col">Дата</th>
@@ -223,7 +223,7 @@
 							</div>
 							<div class="row">
 							  <h4>Останні транзакції:</h4>
-							  <table class="table table-striped table-hover">
+							  <table class="table table-responsive table-striped table-hover">
 								<thead>
 								  <tr>
 									<th scope="col">Дата</th>
