--- a/news_item.html
+++ b/news_item.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="cargo.html">
                         <span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
                         Вантажі
                     </a>
