font size and columns order

--- a/cargo.html
+++ b/cargo.html
@@ -40,7 +40,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="finance.html">
 						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
 						Фінанси
 					</a>
@@ -266,9 +266,9 @@
 								<th scope="col">Отримано</th>
 								<th scope="col">Маршрут</th>
 								<th scope="col">кг</th>
-								<th scope="col">м<sup>3</sup></th>
-								<th scope="col">Опис</th>
+								<th scope="col">м<sup>3</sup></th>								
 								<th scope="col">Локальний трекінг</th>
+								<th scope="col">Опис</th>
 								<th scope="col">Доставлено</th>
 								<th scope="col">Субклієнт</th>
 								<th scope="col">Примітка</th>
