orders page & prettify code

--- a/news_item.html
+++ b/news_item.html
@@ -1,84 +1,82 @@
 <!doctype html>
 <html lang="uk">
-  <head>
+
+<head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="style.css">
-
 	<!-- Font Awesome JS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 	<title>TCG CRM|Новина</title>
-  </head>
-  <body>
+</head>
+
+<body>
 	<div class="wrapper">
 		<!-- Sidebar  -->
-	    <nav id="sidebar">
-            <ul class="list-unstyled components">
-                <li>
-                    <a href="index.html">
-                        <span class="menu_icon"><i class="fas fa-home"></i></span>
-                        Головна
-                    </a>
-                </li>
-                <li>
-                    <a href="cargo.html">
-                        <span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
-                        Вантажі
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
-                        Замовлення
-                    </a>
-                </li>
-                <li>
-                    <a href="finance.html">
-                        <span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
-                        Фінанси
-                    </a>
-                </li>
-                <li>
-                    <a href="news.html">
-                        <span class="menu_icon"><i class="far fa-newspaper"></i></span>
-                        Новини
-                    </a>
-                </li>
-                <li>
-                    <a href="contacts.html">
-                        <span class="menu_icon"><i class="far fa-envelope"></i></span>
-                        Контакти
-                    </a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <span class="menu_icon"><i class="far fa-user"></i></span>
-                        Акаунт
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Клієнт</a>
-                        </li>
-                        <li>
-                            <a href="#">Оновлення</a>
-                        </li>
-                        <li>
-                            <a href="#">Оповіщення</a>
-                        </li>
-                        <li>
-                            <a href="#">Адреса</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>        
+		<nav id="sidebar">
+			<ul class="list-unstyled components">
+				<li>
+					<a href="index.html">
+						<span class="menu_icon"><i class="fas fa-home"></i></span>
+						Головна
+					</a>
+				</li>
+				<li>
+					<a href="cargo.html">
+						<span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
+						Вантажі
+					</a>
+				</li>
+				<li>
+					<a href="orders.html">
+						<span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
+						Замовлення
+					</a>
+				</li>
+				<li>
+					<a href="finance.html">
+						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
+						Фінанси
+					</a>
+				</li>
+				<li>
+					<a href="news.html">
+						<span class="menu_icon"><i class="far fa-newspaper"></i></span>
+						Новини
+					</a>
+				</li>
+				<li>
+					<a href="contacts.html">
+						<span class="menu_icon"><i class="far fa-envelope"></i></span>
+						Контакти
+					</a>
+				</li>
+				<li>
+					<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+						<span class="menu_icon"><i class="far fa-user"></i></span>
+						Акаунт
+					</a>
+					<ul class="collapse list-unstyled" id="pageSubmenu">
+						<li>
+							<a href="#">Клієнт</a>
+						</li>
+						<li>
+							<a href="#">Оновлення</a>
+						</li>
+						<li>
+							<a href="#">Оповіщення</a>
+						</li>
+						<li>
+							<a href="#">Адреса</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
 		<!-- Page Content  -->
 		<div id="content">
 			<header>
@@ -86,12 +84,12 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-3 col-md-4 col-sm-6 search_box">
 							<form>
-							    <div class="input-group">
+								<div class="input-group">
 									<input type="text" class="form-control" placeholder="Глобальний пошук" aria-label="Search" aria-describedby="search">
 									<div class="input-group-append">
-									    <button class="search_button" type="submit"><i class="fas fa-search"></i></button>
+										<button class="search_button" type="submit"><i class="fas fa-search"></i></button>
 									</div>
-							    </div>
+								</div>
 							</form>
 						</div>
 						<div class="col-lg-9 col-md-8 col-sm-6 header_info_box">
@@ -125,25 +123,20 @@
 									<h3>SPRING FEST IN CHINA. ОТРИМАЙТЕ ВАНТАЖ ДО КИТАЙСЬКОГО НОВОГО РОКУ.</h3>
 								</div>
 								<div class="col-12 post_date">
-										11-Jan-2019
-								</div>								
+									11-Jan-2019
+								</div>
 								<div class="col-md-9 post_image">
 									<img src="img/post_item_1.png" alt="post_item_1" class="img img-fluid">
 								</div>
-								<div class="col-md-11 post_body text-left">
-									<p>З 1 по 11 лютого в Китаї буде проходити наймаштабніше свято — Новий Рік за Східним календарем! Офіційні «канікули» у наших азіатських колег триватимуть 10 днів, в зв'язку з чим всі логістичні роботи на території Піднебесної припиняться.</p>
-
-<p>Для того, щоб ваш вантаж не застряг в китайських передноворічних заторах — поспішіть оформити свою доставку так, щоб вона виїхала\вилетіла\відпливла з Китаю до 1-го лютого, тому що інакше, в обробку ваш вантаж візьмуть вже після виходу на роботу наших китайських друзів.</p>
-
-<p>Дати, до яких вантаж повинен зайти на наш склад у Китаї:</p>
-
-<p>- Залізниця — до 26.01</p>
-
-<p>- Авіа — до 28.01</p>
-
-<p>- Море — уточнюйте у свого менеджера</p>
-
-<p>Рекомендуємо зв'язатися з менеджером заздалегідь і уточнити терміни, а також домовитися з постачальником і вказати, коли вантаж повинен бути на нашому складі.</p>
+									<div class="col-md-11 post_body text-left">
+										<p>З 1 по 11 лютого в Китаї буде проходити наймаштабніше свято — Новий Рік за Східним календарем! Офіційні «канікули» у наших азіатських колег триватимуть 10 днів, в зв'язку з чим всі логістичні роботи на території Піднебесної припиняться.</p>
+										<p>Для того, щоб ваш вантаж не застряг в китайських передноворічних заторах — поспішіть оформити свою доставку так, щоб вона виїхала\вилетіла\відпливла з Китаю до 1-го лютого, тому що інакше, в обробку ваш вантаж візьмуть вже після виходу на роботу наших китайських друзів.</p>
+										<p>Дати, до яких вантаж повинен зайти на наш склад у Китаї:</p>
+										<p>- Залізниця — до 26.01</p>
+										<p>- Авіа — до 28.01</p>
+										<p>- Море — уточнюйте у свого менеджера</p>
+										<p>Рекомендуємо зв'язатися з менеджером заздалегідь і уточнити терміни, а також домовитися з постачальником і вказати, коли вантаж повинен бути на нашому складі.</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -151,13 +144,12 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
-	<script src="js/main.js"></script>
-  </body>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		<script src="js/main.js"></script>
+</body>
+
 </html>
