--- a/contacts.html
+++ b/contacts.html
@@ -1,22 +1,20 @@
 <!doctype html>
 <html lang="uk">
-  <head>
+
+<head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="style.css">
-
 	<!-- Font Awesome JS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 	<title>TCG CRM|Контакти</title>
-  </head>
-  <body>
+</head>
+
+<body>
 	<div class="wrapper">
 		<!-- Sidebar  -->
 		<nav id="sidebar">
@@ -34,7 +32,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="orders.html">
 						<span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
 						Замовлення
 					</a>
@@ -78,7 +76,7 @@
 					</ul>
 				</li>
 			</ul>
-		</nav>        
+		</nav>
 		<!-- Page Content  -->
 		<div id="content">
 			<header>
@@ -119,56 +117,60 @@
 						<h2 class="contacts_heading">Контакти</h2>
 					</div>
 					<div class="col-lg-6"></div>
-					<div class="col-lg-3">	
+					<div class="col-lg-3">
 						<div class="time_city_select_box">
-							  <select class="custom-select" name="time_city_select" id="time_city_select">
+							<select class="custom-select" name="time_city_select" id="time_city_select">
 								<option value="1" selected>One</option>
 								<option value="2">Two</option>
 								<option value="3">Three</option>
-							  </select>
+							</select>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-2 contacts_list">
 						<ul>
-							<li><p>UTEC Ukraine</p> 
+							<li>
+								<p>UTEC Ukraine</p>
 								<p><a href="#">Київ</a></p>
 								<p><a href="#">Одеса</a></p>
 							</li>
-							<li><p>UTEC Poland</p> 
+							<li>
+								<p>UTEC Poland</p>
 								<p><a href="#">Варшава</a></p>
 							</li>
-							<li><p>UTEC China</p> 
+							<li>
+								<p>UTEC China</p>
 								<p><a href="#">Шеньчжень</a></p>
 								<p><a href="#">Шанхай</a></p>
 							</li>
-							<li><p>UTEC Hong Kong</p> 
+							<li>
+								<p>UTEC Hong Kong</p>
 								<p><a href="#">Гонконг</a></p>
 							</li>
-							<li><p>UTEC USA</p> 
+							<li>
+								<p>UTEC USA</p>
 								<p><a href="#">Нью Джерсі</a></p>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-10 contacts_map">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.4484167798173!2d30.523012315731393!3d50.45137397947553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce51b5092485%3A0x1694e285031c2032!2sKhreschatyk+St%2C+14%2C+Kyiv%2C+02000!5e0!3m2!1sen!2sua!4v1547585856218" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
 						<div class="contacts_box row">
 							<div class="col-lg-3 col-md-4 col-6">
 								<img src="img/contacts_item_1.jpg" alt="contacts_item_1" class="img img-fluid">
 							</div>
-							<div class="contact_info col-lg-9 col-md-8 col-6">
-								<p><span><i class="fas fa-location"></i></span>
-								518101, Shenzhen, Bao’an District (Gushu Metro station), Xixiang Channel, Hangkong Road 30, Tong’an Logistic Park, No.A building, Room 418</p>
-								<p><span><i class="fas fa-phone"></i></span>+86 (755) 2690 27 15</p>
-								<p><span><i class="fas fa-phone"></i></span>+86 (135) 1024 98 72</p>
-								<p><span><i class="fas fa-phone"></i></span>+86 (755) 2332 05 06</p>
-								<p><span><i class="fas fa-envelope"></i></span>mail@utec-ltd.com</p>
+								<div class="contact_info col-lg-9 col-md-8 col-6">
+									<p><span><i class="fas fa-location"></i></span>
+										518101, Shenzhen, Bao’an District (Gushu Metro station), Xixiang Channel, Hangkong Road 30, Tong’an Logistic Park, No.A building, Room 418</p>
+									<p><span><i class="fas fa-phone"></i></span>+86 (755) 2690 27 15</p>
+									<p><span><i class="fas fa-phone"></i></span>+86 (135) 1024 98 72</p>
+									<p><span><i class="fas fa-phone"></i></span>+86 (755) 2332 05 06</p>
+									<p><span><i class="fas fa-envelope"></i></span>mail@utec-ltd.com</p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
@@ -178,7 +180,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
 	<script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
