--- a/index.html
+++ b/index.html
@@ -1,84 +1,82 @@
 <!doctype html>
 <html lang="uk">
-  <head>
+
+<head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="style.css">
-
 	<!-- Font Awesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 	<title>TCG CRM</title>
-  </head>
-  <body>
+</head>
+
+<body>
 	<div class="wrapper">
 		<!-- Sidebar  -->
-	    <nav id="sidebar">
-            <ul class="list-unstyled components">
-                <li>
-                    <a href="#">
-                        <span class="menu_icon"><i class="fas fa-home"></i></span>
-                        Головна
-                    </a>
-                </li>
-                <li>
-                    <a href="cargo.html">
-                        <span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
-                        Вантажі
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
-                        Замовлення
-                    </a>
-                </li>
-                <li>
-                    <a href="finance.html">
-                        <span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
-                        Фінанси
-                    </a>
-                </li>
-                <li>
-                    <a href="news.html">
-                        <span class="menu_icon"><i class="far fa-newspaper"></i></span>
-                        Новини
-                    </a>
-                </li>
-                <li>
-                    <a href="contacts.html">
-                        <span class="menu_icon"><i class="far fa-envelope"></i></span>
-                        Контакти
-                    </a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <span class="menu_icon"><i class="far fa-user"></i></span>
-                        Акаунт
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Клієнт</a>
-                        </li>
-                        <li>
-                            <a href="#">Оновлення</a>
-                        </li>
-                        <li>
-                            <a href="#">Оповіщення</a>
-                        </li>
-                        <li>
-                            <a href="#">Адреса</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>        
+		<nav id="sidebar">
+			<ul class="list-unstyled components">
+				<li>
+					<a href="#">
+						<span class="menu_icon"><i class="fas fa-home"></i></span>
+						Головна
+					</a>
+				</li>
+				<li>
+					<a href="cargo.html">
+						<span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
+						Вантажі
+					</a>
+				</li>
+				<li>
+					<a href="orders.html">
+						<span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
+						Замовлення
+					</a>
+				</li>
+				<li>
+					<a href="finance.html">
+						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
+						Фінанси
+					</a>
+				</li>
+				<li>
+					<a href="news.html">
+						<span class="menu_icon"><i class="far fa-newspaper"></i></span>
+						Новини
+					</a>
+				</li>
+				<li>
+					<a href="contacts.html">
+						<span class="menu_icon"><i class="far fa-envelope"></i></span>
+						Контакти
+					</a>
+				</li>
+				<li>
+					<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+						<span class="menu_icon"><i class="far fa-user"></i></span>
+						Акаунт
+					</a>
+					<ul class="collapse list-unstyled" id="pageSubmenu">
+						<li>
+							<a href="#">Клієнт</a>
+						</li>
+						<li>
+							<a href="#">Оновлення</a>
+						</li>
+						<li>
+							<a href="#">Оповіщення</a>
+						</li>
+						<li>
+							<a href="#">Адреса</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
 		<!-- Page Content  -->
 		<div id="content">
 			<header>
@@ -86,12 +84,12 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-3 col-md-4 col-sm-6 search_box">
 							<form>
-							    <div class="input-group">
+								<div class="input-group">
 									<input type="text" class="form-control" placeholder="Глобальний пошук" aria-label="Search" aria-describedby="search">
 									<div class="input-group-append">
-									    <button class="search_button" type="submit"><i class="fas fa-search"></i></button>
+										<button class="search_button" type="submit"><i class="fas fa-search"></i></button>
 									</div>
-							    </div>
+								</div>
 							</form>
 						</div>
 						<div class="col-lg-9 col-md-8 col-sm-6 header_info_box">
@@ -122,89 +120,89 @@
 									<h3 class="block_heading"><a href="#">ОСТАННІ ОНОВЛЕННЯ</a></h3>
 								</div>
 								<table class="table table-responsive table-striped table-hover">
-								  <thead>
-									<tr>
-									  <th scope="col">Дата</th>
-									  <th scope="col">Ключ</th>
-									  <th scope="col">Інфо</th>
-									</tr>
-								  </thead>
-								  <tbody>
-									<tr>
-									  <th scope="row">21/12</th>
-									  <td><a href="#">82714</a></td>
-									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-									</tr>
-									<tr>
-									  <th scope="row">21/12</th>
-									  <td><a href="#">82764</a></td>
-									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-									</tr>
-									<tr>
-									  <th scope="row">21/12</th>
-									  <td><a href="#">81793</a></td>
-									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-									</tr>
-									<tr>
-									  <th scope="row">21/12</th>
-									  <td><a href="#">82297</a></td>
-									  <td>"Ukraine - Delivered" - Cargo status has been changed</td>
-									</tr>
-								  </tbody>
+									<thead>
+										<tr>
+											<th scope="col">Дата</th>
+											<th scope="col">Ключ</th>
+											<th scope="col">Інфо</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th scope="row">21/12</th>
+											<td><a href="#">82714</a></td>
+											<td>"Ukraine - Delivered" - Cargo status has been changed</td>
+										</tr>
+										<tr>
+											<th scope="row">21/12</th>
+											<td><a href="#">82764</a></td>
+											<td>"Ukraine - Delivered" - Cargo status has been changed</td>
+										</tr>
+										<tr>
+											<th scope="row">21/12</th>
+											<td><a href="#">81793</a></td>
+											<td>"Ukraine - Delivered" - Cargo status has been changed</td>
+										</tr>
+										<tr>
+											<th scope="row">21/12</th>
+											<td><a href="#">82297</a></td>
+											<td>"Ukraine - Delivered" - Cargo status has been changed</td>
+										</tr>
+									</tbody>
 								</table>
 							</div>
 							<div class="row justify-content-center text-center cargo_block">
-							  <div class="col-12 text-left">
-								<h3 class="block_heading"><a href="#">ВАНТАЖІ</a></h3>
-							  </div>
-							  <div class="col-md-3 col-6 cargo_stage">
-								<div>
-								  <i class="fas fa-cubes"></i>
-								  <h4>Отримано</h4>
+								<div class="col-12 text-left">
+									<h3 class="block_heading"><a href="#">ВАНТАЖІ</a></h3>
 								</div>
-								<div class="row justify-content-center">
-								  <div class="circle">
-									<div class="circle_number">123</div>
-								  </div>
+								<div class="col-md-3 col-6 cargo_stage">
+									<div>
+										<i class="fas fa-cubes"></i>
+										<h4>Отримано</h4>
+									</div>
+									<div class="row justify-content-center">
+										<div class="circle">
+											<div class="circle_number">123</div>
+										</div>
+									</div>
 								</div>
-							  </div>
-							  <div class="col-md-3 col-6 cargo_stage">
-								<div>
-								  <i class="fas fa-plane-departure"></i>
-								  <h4>Відправлено</h4>
+								<div class="col-md-3 col-6 cargo_stage">
+									<div>
+										<i class="fas fa-plane-departure"></i>
+										<h4>Відправлено</h4>
+									</div>
+									<div class="row justify-content-center">
+										<div class="circle">
+											<div class="circle_number">123</div>
+										</div>
+									</div>
 								</div>
-								<div class="row justify-content-center">
-								  <div class="circle">
-									<div class="circle_number">123</div>
-								  </div>
+								<div class="col-md-3 col-6 cargo_stage">
+									<div>
+										<i class="fas fa-plane-arrival"></i>
+										<h4>Прибуло</h4>
+									</div>
+									<div class="row justify-content-center">
+										<div class="circle">
+											<div class="circle_number">123</div>
+										</div>
+									</div>
 								</div>
-							  </div>
-							  <div class="col-md-3 col-6 cargo_stage">
-								<div>
-								  <i class="fas fa-plane-arrival"></i>
-								  <h4>Прибуло</h4>
+								<div class="col-md-3 col-6 cargo_stage">
+									<div>
+										<i class="fas fa-cubes"></i>
+										<h4>На складі</h4>
+									</div>
+									<div class="row justify-content-center">
+										<div class="circle">
+											<div class="circle_number">123</div>
+										</div>
+									</div>
 								</div>
-								<div class="row justify-content-center">
-								  <div class="circle">
-									<div class="circle_number">123</div>
-								  </div>
+								<div class="col-12">
+									<img class="total_icon img img-fluid" src="img/total_icon.svg" alt="total_icon">
+									<h4>Загалом</h4>
 								</div>
-							  </div>
-							  <div class="col-md-3 col-6 cargo_stage">
-								<div>
-								  <i class="fas fa-cubes"></i>
-								  <h4>На складі</h4>
-								</div>
-								<div class="row justify-content-center">
-								  <div class="circle">
-									<div class="circle_number">123</div>
-								  </div>
-								</div>
-							  </div>
-							  <div class="col-12">
-								<img class="total_icon img img-fluid" src="img/total_icon.svg" alt="total_icon">
-								<h4>Загалом</h4>
-							  </div>
 							</div>
 						</div>
 					</div>
@@ -214,49 +212,49 @@
 								<div class="col-12">
 									<h3 class="block_heading"><a href="#">ФІНАНСИ</a></h3>
 								</div>
-							  <div class="col-md-6">
-								<p>Баланс: <span class="total_amount">&#36; 11,413</span></p>
-							  </div>
-							  <div class="col-md-6">
-								<button class="button_standart button_refund">Додати кошти</button>
-							  </div>
+								<div class="col-md-6">
+									<p>Баланс: <span class="total_amount">&#36; 11,413</span></p>
+								</div>
+								<div class="col-md-6">
+									<button class="button_standart button_refund">Додати кошти</button>
+								</div>
 							</div>
 							<div class="row">
-							  <h4>Останні транзакції:</h4>
-							  <table class="table table-responsive table-striped table-hover">
-								<thead>
-								  <tr>
-									<th scope="col">Дата</th>
-									<th scope="col">Замовлення</th>
-									<th scope="col">Сума, &#36;</th>
-									<th scope="col">Баланс</th>
-								  </tr>
-								</thead>
-								<tbody>
-								  <tr>
-									<th scope="row">21/12</th>
-									<td>PRU-47647</td>
-									<td>-387.98</td>
-									<td>0.00</td>
-								  </tr>
-								  <tr>
-									<th scope="row">21/12</th>
-									<td>PRU-47993</td>
-									<td>-1116.00</td>
-									<td>387.98</td>
-								  </tr>
-								  <tr>
-									<th scope="row">21/12</th>
-									<td>PRU-48173</td>
-									<td>-3179.00</td>
-									<td>1503.98</td>
-								  </tr>
-								</tbody>
-							  </table>
+								<h4>Останні транзакції:</h4>
+								<table class="table table-responsive table-striped table-hover">
+									<thead>
+										<tr>
+											<th scope="col">Дата</th>
+											<th scope="col">Замовлення</th>
+											<th scope="col">Сума, &#36;</th>
+											<th scope="col">Баланс</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th scope="row">21/12</th>
+											<td>PRU-47647</td>
+											<td>-387.98</td>
+											<td>0.00</td>
+										</tr>
+										<tr>
+											<th scope="row">21/12</th>
+											<td>PRU-47993</td>
+											<td>-1116.00</td>
+											<td>387.98</td>
+										</tr>
+										<tr>
+											<th scope="row">21/12</th>
+											<td>PRU-48173</td>
+											<td>-3179.00</td>
+											<td>1503.98</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 							<div class="row manager_block">
-							  <div class="col-12">
-								<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h4>
+								<div class="col-12">
+									<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h4>
 							  </div>
 							  <div class="col-6 manager_left">
 									<div>
@@ -285,18 +283,19 @@
 								</div>
 							  <div class="col-6 manager_right">
 									<div>
-										<div class="manager_name"><h3>Ірина</h3></div>
-										<div class="manager_email">l.kosenko@utec-l.com</div>
-										<div class="manager_telegram">
-											<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
-										<div class="manager_telephone">
-											<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
-									</div>
+										<div class="manager_name"><h3>Ірина</h3>
 								</div>
+								<div class="manager_email">l.kosenko@utec-l.com</div>
+								<div class="manager_telegram">
+									<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+								<div class="manager_telephone">
+									<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
 							</div>
-							<div class="row manager_block">
-								<div class="col-12">
-									<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
+						</div>
+					</div>
+					<div class="row manager_block">
+						<div class="col-12">
+							<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
 								</div>
 								<div class="col-6 manager_left">
 									<div>
@@ -325,27 +324,28 @@
 								</div>
 								<div class="col-6 manager_right">
 									<div>
-										<div class="manager_name"><h3>Ірина</h3></div>
-										<div class="manager_email">l.kosenko@utec-l.com</div>
-										<div class="manager_telegram">
-											<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
-										<div class="manager_telephone">
-											<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
-									</div>
-								</div>
-							</div>
+										<div class="manager_name"><h3>Ірина</h3>
 						</div>
+						<div class="manager_email">l.kosenko@utec-l.com</div>
+						<div class="manager_telegram">
+							<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+						<div class="manager_telephone">
+							<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	</div>
+	</div>
+	</div>
 	</div>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
 	<script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
