--- a/news.html
+++ b/news.html
@@ -1,84 +1,82 @@
 <!doctype html>
 <html lang="uk">
-  <head>
+
+<head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="style.css">
-
 	<!-- Font Awesome JS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 	<title>TCG CRM|Новини</title>
-  </head>
-  <body>
+</head>
+
+<body>
 	<div class="wrapper">
 		<!-- Sidebar  -->
-	    <nav id="sidebar">
-            <ul class="list-unstyled components">
-                <li>
-                    <a href="index.html">
-                        <span class="menu_icon"><i class="fas fa-home"></i></span>
-                        Головна
-                    </a>
-                </li>
-                <li>
-                    <a href="cargo.html">
-                        <span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
-                        Вантажі
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
-                        Замовлення
-                    </a>
-                </li>
-                <li>
-                    <a href="finance.html">
-                        <span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
-                        Фінанси
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span class="menu_icon"><i class="far fa-newspaper"></i></span>
-                        Новини
-                    </a>
-                </li>
-                <li>
-                    <a href="contacts.html">
-                        <span class="menu_icon"><i class="far fa-envelope"></i></span>
-                        Контакти
-                    </a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <span class="menu_icon"><i class="far fa-user"></i></span>
-                        Акаунт
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Клієнт</a>
-                        </li>
-                        <li>
-                            <a href="#">Оновлення</a>
-                        </li>
-                        <li>
-                            <a href="#">Оповіщення</a>
-                        </li>
-                        <li>
-                            <a href="#">Адреса</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>        
+		<nav id="sidebar">
+			<ul class="list-unstyled components">
+				<li>
+					<a href="index.html">
+						<span class="menu_icon"><i class="fas fa-home"></i></span>
+						Головна
+					</a>
+				</li>
+				<li>
+					<a href="cargo.html">
+						<span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
+						Вантажі
+					</a>
+				</li>
+				<li>
+					<a href="orders.html">
+						<span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
+						Замовлення
+					</a>
+				</li>
+				<li>
+					<a href="finance.html">
+						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
+						Фінанси
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="menu_icon"><i class="far fa-newspaper"></i></span>
+						Новини
+					</a>
+				</li>
+				<li>
+					<a href="contacts.html">
+						<span class="menu_icon"><i class="far fa-envelope"></i></span>
+						Контакти
+					</a>
+				</li>
+				<li>
+					<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+						<span class="menu_icon"><i class="far fa-user"></i></span>
+						Акаунт
+					</a>
+					<ul class="collapse list-unstyled" id="pageSubmenu">
+						<li>
+							<a href="#">Клієнт</a>
+						</li>
+						<li>
+							<a href="#">Оновлення</a>
+						</li>
+						<li>
+							<a href="#">Оповіщення</a>
+						</li>
+						<li>
+							<a href="#">Адреса</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
 		<!-- Page Content  -->
 		<div id="content">
 			<header>
@@ -86,12 +84,12 @@
 					<div class="row justify-content-between">
 						<div class="col-lg-3 col-md-4 col-sm-6 search_box">
 							<form>
-							    <div class="input-group">
+								<div class="input-group">
 									<input type="text" class="form-control" placeholder="Глобальний пошук" aria-label="Search" aria-describedby="search">
 									<div class="input-group-append">
-									    <button class="search_button" type="submit"><i class="fas fa-search"></i></button>
+										<button class="search_button" type="submit"><i class="fas fa-search"></i></button>
 									</div>
-							    </div>
+								</div>
 							</form>
 						</div>
 						<div class="col-lg-9 col-md-8 col-sm-6 header_info_box">
@@ -124,84 +122,84 @@
 								<div class="col-md-3 post_image">
 									<img src="img/post_item_1.png" alt="post_item_1" class="img img-fluid">
 								</div>
-								<div class="col-md-9 post_body text-left">
-									<div class="col-12 post_date">
-										11-Jan-2019
-									</div>
-									<div class="col-12 post_heading">
-										<a href="news_item.html"><h4>SPRING FEST IN CHINA. ОТРИМАЙТЕ ВАНТАЖ ДО КИТАЙСЬКОГО НОВОГО РОКУ.</h4></a>
-									</div>
-									<div class="col-12 post_exerpt">
-										<a href="news_item.html">З 1 по 11 лютого в Китаї буде проходити наймаштабніше свято — Новий Рік за Східним календарем! Офіційні «канікули» у наших азіатських колег триватимуть 10 днів, в зв'язку з чим всі логістичні роботи на території Піднебесної припиняться.</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="post_box">
-							<div class="row">
-								<div class="col-md-3 post_image">
-									<img src="img/post_item_2.png" alt="post_item_2" class="img img-fluid">
-								</div>
-								<div class="col-md-9 post_body text-left">
-									<div class="col-12 post_date">
-										27-Dec-2018
-									</div>
-									<div class="col-12 post_heading">
-										<a href="news_item.html"><h4>Вантажі UTEC Logistics зберігались в аеропорту «Бориспіль» у належних умовах.</h4></a>
-									</div>
-									<div class="col-12 post_exerpt">
-										<a href="news_item.html">Як повідомлялось раніше, аеропорт «Бориспіль» прийняв рішення про тимчасове обмеження прийому імпортних вантажів з 24 грудня 2018 року до 4 січня 2019 року. Незважаючи на дане обмеження, у вантажному терміналі аеропорту знаходяться тонни вантажу, а також зберігається тенденція затримки реєстрації розібраних вантажів.</a>
+									<div class="col-md-9 post_body text-left">
+										<div class="col-12 post_date">
+											11-Jan-2019
+										</div>
+										<div class="col-12 post_heading">
+											<a href="news_item.html"><h4>SPRING FEST IN CHINA. ОТРИМАЙТЕ ВАНТАЖ ДО КИТАЙСЬКОГО НОВОГО РОКУ.</h4></a>
+										</div>
+										<div class="col-12 post_exerpt">
+											<a href="news_item.html">З 1 по 11 лютого в Китаї буде проходити наймаштабніше свято — Новий Рік за Східним календарем! Офіційні «канікули» у наших азіатських колег триватимуть 10 днів, в зв'язку з чим всі логістичні роботи на території Піднебесної припиняться.</a>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="post_box">
-							<div class="row">
-								<div class="col-md-3 post_image">
-									<img src="img/post_item_3.png" alt="post_item_3" class="img img-fluid">
+							<div class="post_box">
+								<div class="row">
+									<div class="col-md-3 post_image">
+										<img src="img/post_item_2.png" alt="post_item_2" class="img img-fluid">
 								</div>
-								<div class="col-md-9 post_body text-left">
-									<div class="col-12 post_date">
-										20-Dec-2018
-									</div>
-									<div class="col-12 post_heading">
-										<a href="news_item.html"><h4>УВАГА! Аеропорт «Бориспіль» обмежив прийом імпортних вантажів до 04.01.19</h4></a>
-									</div>
-									<div class="col-12 post_exerpt">
-										<a href="news_item.html">З 24 грудня 2018 року міжнародний аеропорт «Бориспіль» у зв'язку з великими сезонними обсягами вантажів вводить тимчасове обмеження на прибуття імпортних відправлень до вантажного терміналу для вантажних та пасажирських повітряних суден.</a>
+										<div class="col-md-9 post_body text-left">
+											<div class="col-12 post_date">
+												27-Dec-2018
+											</div>
+											<div class="col-12 post_heading">
+												<a href="news_item.html"><h4>Вантажі UTEC Logistics зберігались в аеропорту «Бориспіль» у належних умовах.</h4></a>
+											</div>
+											<div class="col-12 post_exerpt">
+												<a href="news_item.html">Як повідомлялось раніше, аеропорт «Бориспіль» прийняв рішення про тимчасове обмеження прийому імпортних вантажів з 24 грудня 2018 року до 4 січня 2019 року. Незважаючи на дане обмеження, у вантажному терміналі аеропорту знаходяться тонни вантажу, а також зберігається тенденція затримки реєстрації розібраних вантажів.</a>
+											</div>
+										</div>
 									</div>
 								</div>
-							</div>
-						</div>
-						<div class="post_box">
-							<div class="row">
-								<div class="col-md-3 post_image">
-									<img src="img/post_item_4.png" alt="post_item_4" class="img img-fluid">
+								<div class="post_box">
+									<div class="row">
+										<div class="col-md-3 post_image">
+											<img src="img/post_item_3.png" alt="post_item_3" class="img img-fluid">
 								</div>
-								<div class="col-md-9 post_body text-left">
-									<div class="col-12 post_date">
-										12-Dec-2018
+											<div class="col-md-9 post_body text-left">
+												<div class="col-12 post_date">
+													20-Dec-2018
+												</div>
+												<div class="col-12 post_heading">
+													<a href="news_item.html"><h4>УВАГА! Аеропорт «Бориспіль» обмежив прийом імпортних вантажів до 04.01.19</h4></a>
+												</div>
+												<div class="col-12 post_exerpt">
+													<a href="news_item.html">З 24 грудня 2018 року міжнародний аеропорт «Бориспіль» у зв'язку з великими сезонними обсягами вантажів вводить тимчасове обмеження на прибуття імпортних відправлень до вантажного терміналу для вантажних та пасажирських повітряних суден.</a>
+												</div>
+											</div>
+										</div>
 									</div>
-									<div class="col-12 post_heading">
-										<a href="news_item.html"><h4>УВАГА! Аеропорт «Бориспіль» припинив обслуговування вантажів до 14.12.2018</h4></a>
-									</div>
-									<div class="col-12 post_exerpt">
-										<a href="news_item.html">Учора аеропорт «Бориспіль» офіційно заявив про припинення прийому вантажних літаків та введення обмеження на прийом вантажів. Дана заборона діє з 11 до 14 грудня 2018 року.</a>
+									<div class="post_box">
+										<div class="row">
+											<div class="col-md-3 post_image">
+												<img src="img/post_item_4.png" alt="post_item_4" class="img img-fluid">
+								</div>
+												<div class="col-md-9 post_body text-left">
+													<div class="col-12 post_date">
+														12-Dec-2018
+													</div>
+													<div class="col-12 post_heading">
+														<a href="news_item.html"><h4>УВАГА! Аеропорт «Бориспіль» припинив обслуговування вантажів до 14.12.2018</h4></a>
+													</div>
+													<div class="col-12 post_exerpt">
+														<a href="news_item.html">Учора аеропорт «Бориспіль» офіційно заявив про припинення прийому вантажних літаків та введення обмеження на прийом вантажів. Дана заборона діє з 11 до 14 грудня 2018 року.</a>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
-	<script src="js/main.js"></script>
-  </body>
+					<!-- Optional JavaScript -->
+					<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+					<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+					<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+					<script src="js/main.js"></script>
+</body>
+
 </html>
