--- a/orders.html
+++ b/orders.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- Font Awesome JS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<title>TCG CRM|Вантажі</title>
+	<title>TCG CRM|Замовлення</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="cargo.html">
 						<span class="menu_icon"><i class="fas fa-truck-moving"></i></span>
 						Вантажі
 					</a>
@@ -112,53 +112,12 @@
 				</div>
 			</header>
 			<div class="container-fluid">
-				<div class="row heading_row justify-content-center text-center">
-					<div class="col-12 text-left">
-						<h3 class="block_heading"><a href="#">ВАНТАЖІ</a></h3>
+				<div class="row heading_row">
+					<div class="col-12">
+						<h3 class="block_heading"><a href="#">Замовлення</a></h3>
 					</div>
-					<div class="col-md-3 col-6 cargo_stage">
-						<div>
-							<i class="fas fa-cubes"></i>
-							<h4>Отримано</h4>
-						</div>
-						<div class="row justify-content-center">
-							<div class="circle">
-								<div class="circle_number">123</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-6 cargo_stage">
-						<div>
-							<i class="fas fa-plane-departure"></i>
-							<h4>Відправлено</h4>
-						</div>
-						<div class="row justify-content-center">
-							<div class="circle">
-								<div class="circle_number">123</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-6 cargo_stage">
-						<div>
-							<i class="fas fa-plane-arrival"></i>
-							<h4>Прибуло</h4>
-						</div>
-						<div class="row justify-content-center">
-							<div class="circle">
-								<div class="circle_number">123</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-6 cargo_stage">
-						<div>
-							<i class="fas fa-cubes"></i>
-							<h4>На складі</h4>
-						</div>
-						<div class="row justify-content-center">
-							<div class="circle">
-								<div class="circle_number">123</div>
-							</div>
-						</div>
+					<div class="col-6">
+						<p>Загалом до сплати: <span class="total_amount">&#36; 2,103</span></p>
 					</div>
 				</div>
 				<div class="row filters_row">
@@ -187,52 +146,13 @@
 								<label class="col-form-label" for="startdate"> по </label>
 								<input type="date" class="form-control" id="enddate" name="departuredate" min="2019-01-01">
 							</div>
-							<div class="form-group route_select">
-								<select class="form-control" id="routeSelect">
-									<option selected>Маршрут</option>
-									<option>Китай-Україна</option>
-									<option>Китай-?-Україна</option>
-								</select>
-							</div>
-							<div class="form-group cargostatus_radio">
-								<div class="btn-group btn-group-toggle" data-toggle="buttons">
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoNew" value="cargoNew" checked>
-										Нові
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoReceived" value="cargoReceived">
-										Отримано
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoSended" value="cargoSended">
-										Відправлено
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoArived" value="cargoArived">
-										Прибуло
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoStorage" value="cargoStorage">
-										На складі
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoDelivered" value="cargoDelivered">
-										Доставлено
-									</label>
-									<label class="btn">
-										<input class="form-check-input" type="radio" name="cargoRadios" id="cargoAll" value="cargoAll">
-										Показати все
-									</label>
-								</div>
-							</div>
 						</form>
 					</div>
 				</div>
 				<div class="row table_row">
 					<div class="col-12 row justify-content-end">
 						<div class="download_button_box col align-items-start">
-							<button class="btn"><i class="far fa-file-excel"></i> (77)</button>
+							<button class="btn"><i class="far fa-file-excel"></i> (7)</button>
 						</div>
 						<div class="table_rows_pagination_select align-self-end">
 							<select class="form-control" id="paginationSelect">
@@ -243,133 +163,101 @@
 							</select>
 						</div>
 						<div class="table_rows_pagination_current align-self-end">
-							<div>1-10 of 77</div>
+							<div>1-7 of 7</div>
 						</div>
 					</div>
 					<div class="col-12">
 						<table class="table table-responsive table-striped table-hover">
 							<thead>
 								<tr>
-									<th scope="col">U-Tracking</th>
-									<th scope="col">Статус</th>
-									<th scope="col">Місцезнаходження</th>
-									<th scope="col">CR-код</th>
-									<th scope="col">Отримано</th>
-									<th scope="col">Маршрут</th>
-									<th scope="col">кг</th>
-									<th scope="col">м<sup>3</sup></th>
-									<th scope="col">Локальний трекінг</th>
-									<th scope="col">Опис</th>
-									<th scope="col">Доставлено</th>
-									<th scope="col">Субклієнт</th>
-									<th scope="col">Примітка</th>
+									<th scope="col">ID</th>
+									<th scope="col">Дата</th>
+									<th scope="col">Замовлення</th>
+									<th scope="col">Вміст</th>
+									<th scope="col">Тип</th>
+									<th scope="col">Сума</th>
+									<th scope="col">Курс до USD</th>
+									<th scope="col">Сума, USD</th>
+									<th scope="col">Баланс, USD</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 								<tr>
-									<td><a href="#">11-798-593-286</a></td>
-									<td>Delivered</td>
-									<td>Ukraine</td>
-									<td>CR-77767</td>
-									<td>29-Sep-2018</td>
-									<td>Chn-Ukr</td>
-									<td>50.00</td>
-									<td>0.480</td>
-									<td></td>
-									<td>鞋子 shoes</td>
+									<td>2375107</td>
 									<td>21-Dec-2018</td>
-									<td><input type="text"></td>
-									<td><input type="text"></td>
+									<td>PRU-47647</td>
+									<td><a href="#">CR-82297</a></td>
+									<td>Office</td>
+									<td>+1870.00 UAH</td>
+									<td>28.00</td>
+									<td>+66.79</td>
+									<td>7525.18</td>
 								</tr>
 							</tbody>
 						</table>
@@ -384,7 +272,7 @@
 							</select>
 						</div>
 						<div class="table_rows_pagination_current">
-							<p>1-10 of 77</p>
+							<p>1-7 of 7</p>
 						</div>
 					</div>
 				</div>
