header and search boxes styling

--- a/cargo.html
+++ b/cargo.html
@@ -79,12 +79,12 @@
 		</nav>
 		<!-- Page Content  -->
 		<div id="content">
-			<header>
+						<header>
 				<div class="container-fluid">
 					<div class="row justify-content-between">
-						<div class="col-lg-3 col-md-4 col-sm-6 search_box">
+						<div class="col-md-4 col-sm-6 header_search_box">
 							<form>
-								<div class="input-group">
+								<div class="input-group search_box">
 									<input type="text" class="form-control" placeholder="Глобальний пошук" aria-label="Search" aria-describedby="search">
 									<div class="input-group-append">
 										<button class="search_button" type="submit"><i class="fas fa-search"></i></button>
@@ -92,16 +92,16 @@
 								</div>
 							</form>
 						</div>
-						<div class="col-lg-9 col-md-8 col-sm-6 header_info_box">
-							<div class="row justify-content-end">
+						<div class="col-md-8 col-sm-6 header_info_box">
+							<div class="row justify-content-end align-items-center">
 								<div class="info_money">
-									<i class="fas fa-money-check-alt"></i>&nbsp;&#36;0
+									<i class="fas fa-money-check-alt">&nbsp; &#36;2426</i>
 								</div>
 								<div class="info_userid">
 									ID: 31-589
 								</div>
 								<div class="info_username">
-									Андрій
+									Сергій
 								</div>
 								<div class="info_logout_button">
 									<i class="fas fa-sign-out-alt"></i>
