--- a/news_item.html
+++ b/news_item.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- Font Awesome JS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<title>TCG CRM|Новина</title>
+	<title>TCG CRM | Новина</title>
 </head>
 
 <body>
@@ -62,16 +62,16 @@
 					</a>
 					<ul class="collapse list-unstyled" id="pageSubmenu">
 						<li>
-							<a href="#">Клієнт</a>
+							<a href="account.html">Клієнт</a>
 						</li>
 						<li>
-							<a href="#">Оновлення</a>
+							<a href="account.html">Оновлення</a>
 						</li>
 						<li>
-							<a href="#">Оповіщення</a>
+							<a href="account.html">Оповіщення</a>
 						</li>
 						<li>
-							<a href="#">Адреса</a>
+							<a href="account.html">Адреса</a>
 						</li>
 					</ul>
 				</li>
