modal on index page

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 									<p>Баланс: <span class="total_amount">&#36; 11,413</span></p>
 								</div>
 								<div class="col-md-6">
-									<button class="button_standart button_refund">Додати кошти</button>
+									<button class="button_standart button_addmoney" type="button" data-toggle="modal" data-target="#addMoneyModal">Додати кошти</button>
 								</div>
 							</div>
 							<div class="row">
@@ -346,6 +346,43 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
+
+<!-- Start Modal -->
+<div class="modal fade addmoney_modal" id="addMoneyModal" tabindex="-1" role="dialog" aria-labelledby="addMoneyModal" aria-hidden="true">
+  <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+	<div class="modal-content">
+	  <div class="modal-header">
+		<h5 class="modal-title" id="exampleModalLongTitle">Додавання коштів</h5>
+		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  <span aria-hidden="true">&times;</span>
+		</button>
+	  </div>
+	  <form class="addmoney_form" id="addmoney_form">
+		<div class="modal-body">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12">
+						<input type="number" class="form-control" placeholder="ID" name="money_id" required>
+						<input type="date" class="form-control" name="money_date" placeholder="Дата" required>
+						<input type="text" class="form-control" name="money_order" placeholder="Замовлення" required>
+						<input type="text" class="form-control" name="money_content" placeholder="Вміст">
+						<input type="text" class="form-control" name="money_type" placeholder="Тип">
+						<input type="text" class="form-control" name="money_amount" placeholder="Сума">
+						<input type="number" class="form-control" name="money_rate_before_usd" placeholder="Курс до USD">
+						<input type="number" class="form-control" name="money_amount_usd" placeholder="Сума, USD">
+						<input type="number" class="form-control" name="money_balance_usd" placeholder="Баланс, USD">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal-footer">
+			<button type="submit" class="button_standart modal_button_submit">Зберегти</button>
+		</div>
+	  </form>
+	</div>
+  </div>
+</div>
+<!-- End Modal -->
 </body>
 
 </html>
