--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 					</a>
 					<ul class="collapse list-unstyled" id="pageSubmenu">
 						<li>
-							<a href="account.html">Клієнт</a>
+							<a href="account.html#nav-profile-tab">Клієнт</a>
 						</li>
 						<li>
-							<a href="account.html">Оновлення</a>
+							<a href="account.html#nav-news-tab">Оновлення</a>
 						</li>
 						<li>
-							<a href="account.html">Оповіщення</a>
+							<a href="account.html#nav-notification-tab">Оповіщення</a>
 						</li>
 						<li>
-							<a href="account.html">Адреса</a>
+							<a href="account.html#nav-address-tab">Адреса</a>
 						</li>
 					</ul>
 				</li>
