style edits datepicker

--- a/orders.html
+++ b/orders.html
@@ -31,7 +31,7 @@
 						Вантажі
 					</a>
 				</li>
-				<li>
+				<li class="active">
 					<a href="orders.html">
 						<span class="menu_icon"><i class="fas fa-clipboard-list"></i></span>
 						Замовлення
@@ -94,8 +94,9 @@
 						</div>
 						<div class="col-md-8 col-sm-6 header_info_box">
 							<div class="row justify-content-end align-items-center">
-								<div class="info_money">
-									<i class="fas fa-money-check-alt">&nbsp; &#36;2426</i>
+								<div class="info_money row align-items-center">
+									<div><i class="fas fa-money-check-alt">&nbsp;</i></div>
+									<div class="money_amount">&#36;2426</div> 
 								</div>
 								<div class="info_userid">
 									ID: 31-589
@@ -280,10 +281,16 @@
 		</div>
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-		<script src="js/main.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+
+	<!-- jQuery UI for Datepicker on Safari -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+
+	<script src="js/main.js"></script>
 </body>
 
 </html>
