--- a/finance.html
+++ b/finance.html
@@ -37,7 +37,7 @@
 						Замовлення
 					</a>
 				</li>
-				<li>
+				<li class="active">
 					<a href="finance.html">
 						<span class="menu_icon"><i class="fas fa-dollar-sign"></i></span>
 						Фінанси
@@ -94,8 +94,9 @@
 						</div>
 						<div class="col-md-8 col-sm-6 header_info_box">
 							<div class="row justify-content-end align-items-center">
-								<div class="info_money">
-									<i class="fas fa-money-check-alt">&nbsp; &#36;2426</i>
+								<div class="info_money row align-items-center">
+									<div><i class="fas fa-money-check-alt">&nbsp;</i></div>
+									<div class="money_amount">&#36;2426</div> 
 								</div>
 								<div class="info_userid">
 									ID: 31-589
@@ -182,101 +183,101 @@
 						</div>
 					</div>
 					<div class="col-12">
-						<table class="table table-responsive table-striped table-hover">
-							<thead>
-								<tr>
-									<th scope="col">ID</th>
-									<th scope="col">Дата</th>
-									<th scope="col">Замовлення</th>
-									<th scope="col">Вміст</th>
-									<th scope="col">Тип</th>
-									<th scope="col">Сума</th>
-									<th scope="col">Курс до USD</th>
-									<th scope="col">Сума, USD</th>
-									<th scope="col">Баланс, USD</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-								<tr>
-									<td>2375107</td>
-									<td>21-Dec-2018</td>
-									<td>PRU-47647</td>
-									<td><a href="#">CR-82297</a></td>
-									<td>Office</td>
-									<td>+1870.00 UAH</td>
-									<td>28.00</td>
-									<td>+66.79</td>
-									<td>7525.18</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
+							<table class="table table-responsive table-striped table-hover">
+								<thead>
+									<tr>
+										<th scope="col">ID</th>
+										<th scope="col">Дата</th>
+										<th scope="col">Замовлення</th>
+										<th scope="col">Вміст</th>
+										<th scope="col">Тип</th>
+										<th scope="col">Сума</th>
+										<th scope="col">Курс до USD</th>
+										<th scope="col">Сума, USD</th>
+										<th scope="col">Баланс, USD</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+									<tr>
+										<td>2375107</td>
+										<td>21-Dec-2018</td>
+										<td>PRU-47647</td>
+										<td><a href="#">CR-82297</a></td>
+										<td>Office</td>
+										<td>+1870.00 UAH</td>
+										<td>28.00</td>
+										<td>+66.79</td>
+										<td>7525.18</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					<div class="col-12 row justify-content-end">
 						<div class="table_rows_pagination_select">
 							<select class="form-control" id="paginationSelect">
@@ -298,7 +299,12 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		<!-- jQuery UI for Datepicker on Safari -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+	
 		<script src="js/main.js"></script>
+
 
 <!-- Start Modal -->
 <div class="modal fade addmoney_modal" id="addMoneyModal" tabindex="-1" role="dialog" aria-labelledby="addMoneyModal" aria-hidden="true">
