--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Sidebar  -->
 		<nav id="sidebar">
 			<ul class="list-unstyled components">
-				<li>
+				<li class="active">
 					<a href="#">
 						<span class="menu_icon"><i class="fas fa-home"></i></span>
 						Головна
@@ -94,8 +94,9 @@
 						</div>
 						<div class="col-md-8 col-sm-6 header_info_box">
 							<div class="row justify-content-end align-items-center">
-								<div class="info_money">
-									<i class="fas fa-money-check-alt">&nbsp; &#36;2426</i>
+								<div class="info_money row align-items-center">
+									<div><i class="fas fa-money-check-alt">&nbsp;</i></div>
+									<div class="money_amount">&#36;2426</div> 
 								</div>
 								<div class="info_userid">
 									ID: 31-589
@@ -113,7 +114,7 @@
 			</header>
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-lg-7 col-md-6">
+					<div class="col-md-6">
 						<div class="dasbord_artbord">
 							<div class="row">
 								<div class="col-12">
@@ -206,7 +207,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-5 col-md-6">
+					<div class="col-md-6">
 						<div class="dasbord_artbord">
 							<div class="row">
 								<div class="col-12">
@@ -255,8 +256,8 @@
 							<div class="row manager_block">
 								<div class="col-12">
 									<h3 class="block_heading">ВАШ МЕНЕДЖЕР</h4>
-							  </div>
-							  <div class="col-6 manager_left">
+								</div>
+								<div class="col-6 manager_left">
 									<div>
 										<img class="img img-fluid manager_photo" src="img/manager_1.png" alt="manager_1" >
 									</div>
@@ -280,22 +281,22 @@
 										</div>
 										<div><span>Оцініть вашого менеджера</span></div>
 									</div>
-								</div>
-							  <div class="col-6 manager_right">
+									</div>
+									<div class="col-6 manager_right">
 									<div>
 										<div class="manager_name"><h3>Ірина</h3>
+									</div>
+									<div class="manager_email">l.kosenko@utec-l.com</div>
+									<div class="manager_telegram">
+										<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+									<div class="manager_telephone">
+										<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
+									</div>
 								</div>
-								<div class="manager_email">l.kosenko@utec-l.com</div>
-								<div class="manager_telegram">
-									<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
-								<div class="manager_telephone">
-									<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
 							</div>
-						</div>
-					</div>
-					<div class="row manager_block">
-						<div class="col-12">
-							<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
+							<div class="row manager_block">
+								<div class="col-12">
+									<h3 class="block_heading">ВАШ ОПЕРАЦІЙНИЙ МЕНЕДЖЕР</h4>
 								</div>
 								<div class="col-6 manager_left">
 									<div>
@@ -325,26 +326,53 @@
 								<div class="col-6 manager_right">
 									<div>
 										<div class="manager_name"><h3>Ірина</h3>
+										</div>
+										<div class="manager_email">l.kosenko@utec-l.com</div>
+										<div class="manager_telegram">
+											<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
+										<div class="manager_telephone">
+											<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
+									</div>
+								</div>
+							</div>
+							<div class="row managers_contact_form_block">
+								<div class="col-12">
+									<form class="managers_contact_form">
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio1" value="your_manager">
+											<label class="form-check-label" for="inlineRadio1">Ваш менеджер</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio2" value="operational_manager">
+											<label class="form-check-label" for="inlineRadio2">Ваш операційний менеджер</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="recipientRadio" id="recipientRadio3" value="company">
+											<label class="form-check-label" for="inlineRadio3">Компанія</label>
+										</div>
+										<div class="form-group user_message_box">
+											<textarea class="form-control" id="userMessage" rows="3"></textarea>
+										</div>
+										<button type="submit" class="button_standart">Надіслати</button>
+									</form>
+								</div>
+							</div>
 						</div>
-						<div class="manager_email">l.kosenko@utec-l.com</div>
-						<div class="manager_telegram">
-							<span class="icon_box"><i class="fab fa-telegram"></i></span>+380966426120</div>
-						<div class="manager_telephone">
-							<span class="icon_box"><i class="fas fa-mobile-alt"></i></span>+380966426120</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</div>
-	</div>
-	</div>
 	</div>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	
+	<!-- jQuery UI for Datepicker on Safari -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+
 	<script src="js/main.js"></script>
 
 <!-- Start Modal -->
